[gd_scene load_steps=3 format=3 uid="uid://fbh2o6ysqdsg"]

[ext_resource type="Script" uid="uid://l2o20aq5uuuu" path="res://UI/battle_ui.gd" id="1_76cpj"]
[ext_resource type="Theme" uid="uid://ce87vvxt2a536" path="res://UI/theme.tres" id="1_fyysl"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_76cpj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("1_fyysl")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Control" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Control2" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Panel" type="Panel" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control2/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control2/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 40
text = "You <>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control2/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="RewardLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control2/VBoxContainer/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
theme = ExtResource("1_fyysl")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="Control2" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/Control2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Control3" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control2" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Control3" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Control3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Start"

[node name="Control" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Timer" type="Timer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Control"]
wait_time = 5.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Control/HBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Control/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
text = "Give up"

[node name="Control3" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control4" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Control3/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Control/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/MarginContainer/HBoxContainer/Control/HBoxContainer/VBoxContainer/Button" to="." method="_on_give_up_button_pressed"]
